--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-global"></use>
-          <h4 class="heading-4">World's best luxury homes</h4>
+          <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
           <p class="feature__text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.
           </p>
@@ -42,7 +42,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-trophy"></use>
-          <h4 class="heading-4">Only the best properties</h4>
+          <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
           <p class="feature__text">
             Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.
           </p>
@@ -52,7 +52,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          <h4 class="heading-4">All homes in top locations</h4>
+          <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
           <p class="feature__text">
             Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.
           </p>
@@ -62,7 +62,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-key"></use>
-          <h4 class="heading-4">New home in one week</h4>
+          <h4 class="heading-4 heading-4--dark">New home in one week</h4>
           <p class="feature__text">
             Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
@@ -72,7 +72,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
-          <h4 class="heading-4">Top 1% realtors</h4>
+          <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
           <p class="feature__text">
             Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.
           </p>
@@ -82,7 +82,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-lock"></use>
-          <h4 class="heading-4">Security payments on nexter</h4>
+          <h4 class="heading-4 heading-4--dark">Security payments on nexter</h4>
           <p class="feature__text">
             Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
           </p>
