--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <use xlink:href="img/sprite.svg#icon-global"></use>
           <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
           <p class="feature__text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+            voluptatibus.
           </p>
         </svg>
       </div>
@@ -96,7 +97,13 @@
     </div>
 
     <div class="story__content">
-      Story Content
+      <h3 class="heading-3 mb-sm">Happy Customers</h3>
+      <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+      <p class="story__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus
+        pariatur voluptatibus. Quidem consequatur harum volupta!
+      </p>
+      <button class="btn">Find your own home</button>
     </div>
 
     <section class="homes">
