--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <img src="img/house-1.jpeg" alt="House 1" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Beautiful Family House</h5>
@@ -144,7 +144,7 @@
           <p>$1,200,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
 
@@ -154,7 +154,7 @@
         <img src="img/house-2.jpeg" alt="House 2" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Modern Glass Villa</h5>
@@ -186,14 +186,14 @@
           <p>$2,750,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
       <div class="home">
         <img src="img/house-3.jpeg" alt="House 3" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Cozy Country House</h5>
@@ -225,14 +225,14 @@
           <p>$850,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
       <div class="home">
         <img src="img/house-4.jpeg" alt="House 4" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Large Rustical Villa</h5>
@@ -264,14 +264,14 @@
           <p>$1,950,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
       <div class="home">
         <img src="img/house-5.jpeg" alt="House 5" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Majestic Palace House</h5>
@@ -303,14 +303,14 @@
           <p>$9,500,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
       <div class="home">
         <img src="img/house-6.jpeg" alt="House 6" class="home__img">
 
         <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart"></use>
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
 
         <h5 class="home__name">Modern Family Apartment</h5>
@@ -342,7 +342,7 @@
           <p>$600,000</p>
         </div>
 
-        <button class="cta">Contact Realtor</button>
+        <button class="btn home__btn">Contact Realtor</button>
       </div>
 
 
